# Beeline

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a0db532d69b6_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: admin.py  chat.py  metadata.py  workspace.py
backend/app/connectors/: base.py  registry.py
backend/app/connectors/hive/: connector.py
backend/app/core/: cache.py  config.py  database.py  exceptions.py  json_utils.py  logging.py
backend/app/llm/: base.py  prompts.py  providers.py
backend/app/models/: __init__.py  base.py  catalog.py  chat.py  dashboard.py  governance.py  queries.py  semantic.py  settings_store.py
backend/app/pipeline/: orchestrator.py  sql_utils.py  types.py
backend/app/pipeline/stages/: clarification.py  cost.py  executor.py  intent.py  interpreter.py  optimizer.py  planner.py  refiner.py  semantic_search.py  (+4 more)
backend/app/schemas/: api.py  response.py
backend/app/services/: approval.py  audit.py  chat.py  enrichment.py  explain.py  import_export.py  logs_purge.py  metadata_sync.py  query_library.py
backend/config/: settings.docker.yaml  settings.yaml
backend/sample_data/: dim_customers.csv  dim_products.csv  fact_sales.csv  seed.hql
backend/scripts/: generate_sample_data.py
backend/tests/: conftest.py  test_guardrails.py  test_json_utils.py  test_llm_providers.py  test_logs_purge.py  test_optimizer.py  test_settings.yaml  test_sql_generator.py  test_sql_utils.py  test_visualization.py
(+238 files in other folders)
