[project]
name = "beeline-backend"
version = "1.0.0"
description = "Beeline - Enterprise NL-to-SQL Analytics & Metadata Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "alembic>=1.13",
    "httpx>=0.27",
    "sqlglot>=25.0",
    "redis>=5.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "pyhive[hive_pure_sasl]>=0.7",
    "thrift>=0.16",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
